--- a/C++/头文件、链接、编译/常用头文件.md
+++ b/C++/头文件、链接、编译/常用头文件.md
@@ -1,6 +1,9 @@
 # 通用头文件
 ## 万能头文件
-vs编译器暂不支持
+注：vs编译器暂不支持
 ```
 #include <bits/stdc++.h>
 ```
+|column1|column2|column3|
+|-|-|-|
+|content1|content2|content3|
