--- a/C++/头文件、链接、编译/常用头文件.md
+++ b/C++/头文件、链接、编译/常用头文件.md
@@ -5,7 +5,8 @@
 ```
 #include <bits/stdc++.h>
 ```
-	#include <algorithm>　　　	//STL 通用算法
+s
+	> #include <algorithm>　　　	//STL 通用算法
 	#include <bitset>　　　　　	//STL 位集容器
 	#include <cctype>         	//字符处理
 	#include <cerrno> 　　　　 	//定义错误码
