--- a/C++/头文件、链接、编译/常用头文件.md
+++ b/C++/头文件、链接、编译/常用头文件.md
@@ -6,7 +6,8 @@
 #include <bits/stdc++.h>
 ```
 s
-	> #include <algorithm>　　　	//STL 通用算法
+```css
+	#include <algorithm>　　　	//STL 通用算法
 	#include <bitset>　　　　　	//STL 位集容器
 	#include <cctype>         	//字符处理
 	#include <cerrno> 　　　　 	//定义错误码
@@ -55,4 +56,4 @@ s
 	#include <utility>　　　　 	//STL 通用模板类
 	#include <valarray>       	//对包含值的数组的操作
 	#include <vector>　　　　　	//STL 动态数组容器
-
+```
