--- a/C++/头文件、链接、编译/常用头文件.md
+++ b/C++/头文件、链接、编译/常用头文件.md
@@ -1,11 +1,11 @@
 # STL头文件
 ## 万能头文件
 
-==注：vs编译器暂不支持==
-```
+> ==vs编译器暂不支持==
+```cpp
 #include <bits/stdc++.h>
+using namespace std;
 ```
-
 `
 	#include <algorithm>　　　	//STL 通用算法
 	#include <bitset>　　　　　	//STL 位集容器
