--- a/C++/头文件、链接、编译/常用头文件.md
+++ b/C++/头文件、链接、编译/常用头文件.md
@@ -4,9 +4,9 @@
 > ==vs编译器暂不支持==
 ```cpp
 #include <bits/stdc++.h>
-using namespace std;
 ```
-```
+## 常用头文件及其作用
+```cpp
 #include <algorithm>　　　	//STL 通用算法
 #include <bitset>　　　　　	//STL 位集容器
 #include <cctype>         	//字符处理
