--- a/C++/头文件、链接、编译/预编译.md
+++ b/C++/头文件、链接、编译/预编译.md
@@ -2,9 +2,9 @@
 ## 万能头文件
 
 
-> ==vs编译器暂不支持==
+> ==gcc编译器可用, vs不支持==
 ```cpp
-#include <bits/stdc++.h> // gcc编译器可用, vs不支持
+#include <bits/stdc++.h> // 
 ```
 
 
