--- a/1.预编译/2.宏与enum.md
+++ b/1.预编译/2.宏与enum.md
@@ -1,5 +1,6 @@
+[]
 # define
-宏在编译时展开，将宏定义替换
+宏在编译时展开，将宏定义替换：
 
 	#define FOREVER for(;;) //死循环
 	#define CASE break;case 
@@ -16,3 +17,4 @@
 enum hack的行为某方面比较像`#define`而不像`const`，如对`enum`取址不合法；`enum`和`#define`一样绝不会导致非必要的内存分配；
 
 	enum {value = 1};
+
