--- a/3.类与对象/1.类与对象.md
+++ b/3.类与对象/1.类与对象.md
@@ -11,6 +11,7 @@
 > 6. `class`如果不指明成员属性，默认为`private`
 > 7. 类在声明前不能定义对象，但是可以定义其指针
 
+
 ```cpp
 class Clock{
 public: // 公有成员
@@ -20,27 +21,16 @@ private: // 私有成员
     …
 };
 ```
-> ==note: 和`struct`, `enum`一样，`';'`也是类定义的一部分, 表示类定义结束==
+> ==和`struct`, `enum`一样，`';'`也是类定义的一部分, 表示类定义结束==
 
-类内定义的函数默认为内联inline函数
-同一个class的对象互为友元friend
-1. 创建对象（类的实例）：
-在栈上创建对象	实参位于对象名后面，例如Clock today(0,0,0)；
-在堆上创建对象	实参位于类名后面，例如Clock *ptoday=new Clock(0,0,0);使用结束后应该delete
-    auto* p=new Clock(0,0,0);和auto p=new Clock(0,0,0);是一样的
-3. 访问成员（创建对象后）
-对象使用.	today.display();
-指向对象的指针使用->	ptoday->display();
-4. 类的大小：
-    > 虚函数本身、成员函数（包括静态与非静态）和静态数据成员都是不占用类对象的存储空间的
-    > 空类、单一继承的空类、多重继承的空类所占空间大小为：1字节
-    > 当类中声明了虚函数（不管是1个还是多个），那么在实例化对象时，编译器会自动在对象里安插一个指针vPtr指向虚函数表VTable；
-    > 虚承继的情况：由于涉及到虚函数表和虚基表，会同时增加一个（多重虚继承下对应多个）vfPtr指针指向虚函数表vfTable和一个vbPtr指针指向虚基表vbTable，这两者所占的空间大小为：8（或8乘以多继承时父类的个数）；
-类对象的大小=各非静态数据成员（包括父类的非静态数据成员但都不包括所有的成员函数）的总和+ vfptr指针(多继承下可能不止一个)+vbptr指针(多继承下可能不止一个)+编译器内存对齐增加的字节。
 
-## `class`, `struct`和`enum`
-> `struct`是一种特殊的类(成员为`public`类型), `union`和`enum`则是一种特殊的struct
-### union: 联合，所有成员都分配在同一地址
+4. 
+
+### `class`, `struct`和`enum`
+> `struct`是一种特殊的类, `union`和`enum`则是一种特殊的struct
+#### `struct`: 结构体
+
+#### union: 联合，所有成员都分配在同一地址
 同一时刻`union`只能保存一个成员变量的值，不推荐使用
 ```cpp
 union Value{
@@ -48,7 +38,7 @@ union Value{
     int i;
 };
 ```
-### enum: 枚举
+#### enum: 枚举
 枚举默认为`int`，从0开始递增，也可以指定值。枚举用一些整数类型表示，每个枚举值必须是一种带符号或无符号的整数类型。
 #### 普通枚举：枚举名与类型在同一作用域内，值可以隐式转换成整数
     
@@ -64,3 +54,6 @@ Color c = red;
     3 Color c = Color::red;
 
 ## 对象的概念
+类与对象的关系
+`static`成员, 成员函数属于类
+成员变量属于对象
