--- a/3.类与对象/2.成员类型与关键字.md
+++ b/3.类与对象/2.成员类型与关键字.md
@@ -1,6 +1,6 @@
 ## 嵌套类
 > 嵌套类(nested class)也称为成员类(member class)
-==note：注意和[类的组合](类的组合.md)区分==
+==note：注意和[类的组合](7.类的组合.md)区分==
 ```cpp
 class Tree{ 
     //在Tree的内部声明Node类
