--- a/3.类与对象/1.类与对象.md
+++ b/3.类与对象/1.类与对象.md
@@ -40,19 +40,20 @@ union Value{
 ```
 #### enum: 枚举
 枚举默认为`int`，从0开始递增，也可以指定值。枚举用一些整数类型表示，每个枚举值必须是一种带符号或无符号的整数类型。
-#### 普通枚举：枚举名与类型在同一作用域内，值可以隐式转换成整数
+##### 普通枚举：枚举名与类型在同一作用域内，值可以隐式转换成整数
     
 ```cpp
 enum Color{red, yellow, green};
 enum Color:char{red, yellow, green};  //可以声明类型
 Color c = red;
 ```    
-#### 强枚举：枚举名位于enum局部作用域，值不会隐式转换
+##### 强枚举：枚举名位于enum局部作用域，值不会隐式转换
     
-        1 enum class Color{red, yellow, green};
-        2 enum Color:char{red, yellow, green};  //可以声明类型
-    3 Color c = Color::red;
-
+```cpp
+enum class Color{red, yellow, green};
+enum Color:char{red, yellow, green};  //可以声明类型
+Color c = Color::red;
+```
 ## 对象的概念
 类与对象的关系
 `static`成员, 成员函数属于类
