--- a/3.类与对象/1.类与对象.md
+++ b/3.类与对象/1.类与对象.md
@@ -1,6 +1,4 @@
-# 类与对象
----
-## 类的概念
+# 类的概念
 
 > 1. `class`是用户自定义类型，可以定义;
 > 2. 一个类是包含其成员的命名空间;
@@ -24,13 +22,13 @@ private: // 私有成员
 > ==和`struct`, `enum`一样，`';'`也是类定义的一部分, 表示类定义结束==
 
 
-4. 
+1. 
 
-### `class`, `struct`和`enum`
+## `class`, `struct`和`enum`
 > `struct`是一种特殊的类, `union`和`enum`则是一种特殊的struct
-#### `struct`: 结构体
+### `struct`: 结构体
 
-#### union: 联合，所有成员都分配在同一地址
+### `union`: 联合，所有成员都分配在同一地址
 同一时刻`union`只能保存一个成员变量的值，不推荐使用
 ```cpp
 union Value{
@@ -38,23 +36,24 @@ union Value{
     int i;
 };
 ```
-#### enum: 枚举
+### `enum`: 枚举
 枚举默认为`int`，从0开始递增，也可以指定值。枚举用一些整数类型表示，每个枚举值必须是一种带符号或无符号的整数类型。
-##### 普通枚举：枚举名与类型在同一作用域内，值可以隐式转换成整数
+#### 普通枚举：枚举名与类型在同一作用域内，值可以隐式转换成整数
     
 ```cpp
 enum Color{red, yellow, green};
 enum Color:char{red, yellow, green};  //可以声明类型
 Color c = red;
 ```    
-##### 强枚举：枚举名位于enum局部作用域，值不会隐式转换
+#### 强枚举：枚举名位于enum局部作用域，值不会隐式转换
     
 ```cpp
 enum class Color{red, yellow, green};
 enum Color:char{red, yellow, green};  //可以声明类型
 Color c = Color::red;
 ```
-## 对象的概念
+---
+# 对象的概念
 类与对象的关系
 `static`成员, 成员函数属于类
 成员变量属于对象
