--- a/1.编译与链接/1.编译预处理.md
+++ b/1.编译与链接/1.编译预处理.md
@@ -10,7 +10,7 @@
 ```cpp
 #include <bits/stdc++.h> // gcc编译器可用, vs不支持
 ```
-
+---
 ### 宏定义`#define`
 
 
@@ -24,17 +24,23 @@
 #define PI 3.14
 ```	
 
-若段落引用若必须使用宏，尽量用括号把宏参数括起来，全局名字一定要使用作用域解析符:
+如果必须使用宏，尽量用括号把宏参数括起来，全局名字一定要使用作用域解析符:
 
 ```cpp
 #define MIN(a, b) (((a)<(b))?(a):(b))
 ```	
 ### enum hack
-enum hack的行为某方面比较像`#define`而不像`const`，如对`enum`取址不合法；`enum`和`#define`一样不会导致非必要的内存分配；
+`#define`进行的是字符串替换，不利于程序调试,而且不容易控制范围
 
 ```cpp
 enum {value = 1};
 ```
+
+> - enum hack比较像`#define`而不像`const`，比如对`enum`取址不合法；
+> - `enum`和`#define`一样不会导致非必要的内存分配；
+> - enum hack是模板元编程的一项基本技术，大量的代码在使用
+> - enum定义的常量，并不是在预编译的时候进行替换，只是在编译的时候，根据标识去常量区获取对应的值
+
 ---
 > ### <span id="jump">常用头文件及其作用</span>
 > ```cpp
