--- a/1.编译与链接/1.编译预处理.md
+++ b/1.编译与链接/1.编译预处理.md
@@ -30,7 +30,7 @@
 #define MIN(a, b) (((a)<(b))?(a):(b))
 ```	
 ### enum hack
-`#define`进行的是字符串替换，不利于程序调试,而且不容易控制范围
+**作用**：`#define`进行的是字符串替换，不利于程序调试，而且不容易控制范围。使用enum hack可以定义一个枚举常量，而且不会导致不必要的内存分配。
 
 ```cpp
 enum {value = 1};
@@ -73,7 +73,7 @@ enum {value = 1};
 > #include <locale>         	//本地化特定信息
 > #include <map>　　　　　　 	//STL 映射容器
 > #include <memory>         	//STL通过分配器进行的内存分配
-> #include<new>            	//动态内存分配
+> #include <new>            	//动态内存分配
 > #include <numeric>         	//STL常用的数字操作
 > #include <iomanip> 　　　 	//参数化输入/输出
 > #include <ios>　　　　　　 	//基本输入/输出支持
@@ -94,5 +94,3 @@ enum {value = 1};
 > #include <valarray>       	//对包含值的数组的操作
 > #include <vector>　　　　　	//STL 动态数组容器
 > ```
-
-# 1
