--- a/3.类与对象/1.类与对象.md
+++ b/3.类与对象/1.类与对象.md
@@ -24,8 +24,11 @@ private: // 私有成员
 
 1. 
 
-## `class`, `struct`和`enum`的关系
-> `struct`是一种特殊的类, `union`和`enum`则是一种特殊的struct
+## `class`, `union`, `struct`和`enum`的关系
+> 1. `struct`是一种特殊的类, `union`和`enum`则是一种特殊的`struct`；
+> 2. `struct`是成员和继承关系默认是`public`属性的,`class`默认为`private`；
+> 3. C语言中`struct`只能包含成员变量，不可包含成员函数，C++都可包含；
+> 4. `class`可以使用模板，`struct`不能使用。
 > - 更多关于`struct`, `enum`, `union`可见[数据类型](..\类型与初始化\数据类型.md)
 
 ---
