--- a/类型与初始化/数据类型.md
+++ b/类型与初始化/数据类型.md
@@ -13,18 +13,20 @@ union Value{
 
 > 1. 枚举默认为`int`，必须是一种带符号或无符号的整数类型；
 > 2. 不指定值时默认从0开始，后面每个值为前项+1，枚举常量的值可以重复；
-> 3. 枚举
+> 3. 枚举命名常量的值不可更改，没有初始化枚举对象时不占用内存空间。
+> 4. 枚举常量详见[enum hack](..\1.编译与链接\1.编译预处理.md)
+
 #### 普通枚举：枚举名与类型在同一作用域内，值可以隐式转换成整数
     
 ```cpp
-enum Color{red, yellow, green};
-enum Color:char{red, yellow, green};  //可以声明类型
-Color c = red;
+enum {a = 0, b, c}; //可以不声明枚举名，只定义命名常量a,b,c的值
+enum Color{red=1, yellow, green=1}; //可以声明相同的值，后一项yellow默认=2
+enum Rooms:char{ livingroom, den, bedroom, kitchen }; //可以声明类型
+Color c = red; //enum定义
 ```    
 #### 强枚举：枚举名位于enum局部作用域，值不会隐式转换
     
 ```cpp
 enum class Color{red, yellow, green};
-enum Color:char{red, yellow, green};  //可以声明类型
-Color c = Color::red;
+Color c = Color::red; //使用必须加上枚举名Color
 ```
