--- a/3.类与对象/2.成员类型与关键字.md
+++ b/3.类与对象/2.成员类型与关键字.md
@@ -15,27 +15,27 @@ class Tree{
 
 ## 成员类型与关键字
 ### `this`关键字：
-> 1. 用在类的内部，是一个`const`指针，指向当前对象，用->来访问当前对象的成员变量或成员函数
-> 2. `this`是`const`指针，不能被修改，只能在成员函数内部使用，用在其他地方是非法的
+**作用**：
+1. 在类的非静态成员函数中需要返回类对象本身的时候，使用 `return *this;`
+2. 当参数与成员变量名相同时，如`this->n = n;` （不能写成`n = n`）
+> 1. 用在类的内部，是一个`const`指针，指向当前对象，可以用->来访问当前对象的成员变量或成员函数
+> 2. `this`是`const`指针，不能被修改，==只能在成员函数内部使用==，用在其他地方是非法的
 > 3. `this`实质上是成员函数的一个形参，在调用成员函数时将对象地址作为实参传递给`this`, 在编译阶段由编译器自动将其添加到参数列表
 > 4. `this`是一个右值，不能取得`this`的地址(不能`&this`)
 
 ### `const关键字`
 `const`可以用来修饰成员变量、成员函数、对象
-`const`成员变量：和普通变量用法相似，只能通过参数初始化列表初始化
-`const`对象：将对象定义为常对象后，就只能访问被const修饰的成员（非const成员可能会修改对象数据，编译器是禁止的，因此不改变数据的成员函数必须加const）
-`const`成员函数（常成员函数）：可以使用类中所有成员变量，但是不能修改它们的值，在定义和声明的时候都要在结尾加上const关键字
-实际上const修饰的是隐式的this指针
+- `const`成员变量：和普通变量用法相似，只能通过参数初始化列表初始化
+- `const`对象：将对象定义为常对象后，就只能访问被const修饰的成员（非const成员可能会修改对象数据，编译器是禁止的，因此不改变数据的成员函数必须加const）
+- `const`成员函数（常成员函数）：可以使用类中所有成员变量，但是不能修改它们的值，在定义和声明的时候都要在结尾加上const关键字
+> 实际上const修饰的是隐式的this指针
+
+```cpp
 int gethour() const;//类内
 void Clock::gethour() const{
     return m_hour;
 }
-
-> 形式：
-> int gethour() const;//类内
-> void Clock::gethour() const{
-    > return m_hour;
-> }
+```
 
 1	const成员函数可以使用类中所有成员变量，但是不能修改它们的值
 2	const成员函数声明和定义都必须使用const后缀
@@ -60,12 +60,13 @@ public:
     static int m_count;
 }；
 ```
-> static静态成员变量必须在类声明的外部初始化:
-type class::name = value;//静态成员变量在初始化时不能再加 static，但必须要有数据类型
-static 成员变量的内存既不是在声明类时分配，也不是在创建对象时分配，而是在（类外）初始化时分配。没有在类外初始化的 static 成员变量不能使用。
-
-> static 成员变量既可以通过对象来访问，也可以通过`classname::member`来访问
-
+> - static静态成员变量必须在类声明的外部初始化()；
+> ```cpp
+> type class::name = value;//静态成员变量在初始化时不能再加 static，但必须要有数据类型
+> ```
+> - static 成员变量的内存既不是在声明类时分配，也不是在创建对象时分配，而是在（类外）初始化时分配。没有在类外初始化的 static 成员变量不能使用。
+> - static 成员变量既可以通过对象来访问，也可以通过`classname::member`来访问
+> 
 static 成员变量不占用对象的内存，而是在所有对象之外开辟内存，即使不创建对象也可以访问。
 #### 静态成员函数
 > 静态成员函数主要目的是访问静态成员变量。
