--- a/其他/打造专属云笔记.md
+++ b/其他/打造专属云笔记.md
@@ -10,7 +10,7 @@
 ### PicGo
 1. 注册github账号
 2. 新建仓库
-![20190811160015.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190811160015.png)
+![alt 20190811160015.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190811160015.png)
 
 3. 生成一个token用于PicGo操作你的仓库：
 
