--- a/2.基础/初始化.md
+++ b/2.基础/初始化.md
@@ -5,3 +5,7 @@
 3. 访问成员（创建对象后）
 对象使用.	today.display();
 指向对象的指针使用->	ptoday->display();
+
+auto 只能用在局部变量里用。别用在文件作用域变量，命名空间作用域变量和类数据成员里。永远别列表初始化 auto 变量。
+
+auto 还可以和 C++11 特性「尾置返回类型（trailing return type）」一起用，不过后者只能用在 lambda 表达式里。
