--- a/1.如何运行一个C++程序/1.如何运行C++程序.md
+++ b/1.如何运行一个C++程序/1.如何运行C++程序.md
@@ -1,7 +1,16 @@
 # 编译与链接
 ---
-## C++从代码到可执行文件
+## 如何运行一个C++程序？
 
-### C++生成可执行文件的流程
+### 从代码到可执行文件
+
+> C++从源代码生成可执行文件的过程：
 
 ![20190813152426.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190813152426.png)
+
+### C++文件
+#### C++文件格式
+| 编译器 | Microsoft Visual C++ | GCC（GNU C++）       | Borland C++ | UNIX       |
+| ------ | -------------------- | -------------------- | ----------- | ---------- |
+| 源文件后缀   | .cpp .cxx .cc         | .cpp .cxx .cc .c++ .C | .cpp         | .C .cc .cxx |
+
