--- a/1.如何运行一个C++程序/2.编译预处理.md
+++ b/1.如何运行一个C++程序/2.编译预处理.md
@@ -11,14 +11,15 @@
 #include <bits/stdc++.h> // gcc编译器可用, vs不支持
 ```
 ---
-### 宏定义`#define`
+### 宏`#define`
 
+> 使用宏时要非常谨慎，尽量以内联函数、枚举和常量代替
 
 ```cpp
 #define FOREVER for(;;) //死循环
 #define CASE break;case 
 ```
-应该避免使用宏定义常量:
+宏意味着你和编译器看到的代码是不同的。这可能会导致异常行为，尤其因为宏具有全局作用域，应该==避免使用宏定义常量==:
 
 ```cpp
 #define PI 3.14
@@ -40,6 +41,8 @@ enum {value = 1};
 > - `enum`和`#define`一样不会导致非必要的内存分配；
 > - enum hack是模板元编程的一项基本技术，大量的代码在使用
 > - enum定义的常量，并不是在预编译的时候进行替换，只是在编译的时候，根据标识去常量区获取对应的值
+
+### constexpr
 
 ---
 > ### <span id="jump">常用头文件及其作用</span>
