--- a/1.如何运行一个C++程序/2.编译预处理.md
+++ b/1.如何运行一个C++程序/2.编译预处理.md
@@ -1,17 +1,9 @@
-
-# 编译预处理
-
-## 头文件与宏定义
-> - 头文件: 作为一种包含功能函数、数据接口声明的载体文件，主要用于保存程序的声明
-> - 宏: `#define`在预编译时展开，将相对应位置宏定义替换成文本, 应尽量避免使用宏定义常量
-### 万能头文件
-
-> 包含STL以及[常用头文件](#jump)的, 可用[LeetCode](https://leetcode-cn.com/)等刷题网站
-```cpp
-#include <bits/stdc++.h> // gcc编译器可用, vs不支持
-```
+[TOC]
 ---
+
+## 宏与预定义常量
 ### 宏`#define`
+**宏**：`#define`在预编译时展开，将相对应位置宏定义替换成文本, 应尽量避免使用宏定义常量
 
 > 使用宏时要非常谨慎，尽量以内联函数、枚举和常量代替
 
@@ -30,6 +22,9 @@
 ```cpp
 #define MIN(a, b) (((a)<(b))?(a):(b))
 ```	
+### const常量
+//TODO
+
 ### enum hack
 **作用**：`#define`进行的是字符串替换，不利于程序调试，而且不容易控制范围。使用enum hack可以定义一个枚举常量，而且不会导致不必要的内存分配。
 
@@ -40,12 +35,22 @@ enum {value = 1};
 > - enum hack比较像`#define`而不像`const`，比如对`enum`取址不合法；
 > - `enum`和`#define`一样不会导致非必要的内存分配；
 > - enum hack是模板元编程的一项基本技术，大量的代码在使用
-> - enum定义的常量，并不是在预编译的时候进行替换，只是在编译的时候，根据标识去常量区获取对应的值
+> - `enum`定义的常量，并不是在预编译的时候进行替换，只是在编译的时候，根据标识去常量区获取对应的值
 
 ### constexpr
+//TODO
 
 ---
-> ### <span id="jump">常用头文件及其作用</span>
+## 头文件
+### 万能头文件
+> - 头文件: 作为一种包含功能函数、数据接口声明的载体文件，主要用于保存程序的声明
+> 包含STL以及[常用头文件](#jump)的, 可用[LeetCode](https://leetcode-cn.com/)等刷题网站
+```cpp
+#include <bits/stdc++.h> // gcc编译器可用, vs不支持
+```
+
+---
+### <span id="jump">常用头文件及其作用</span>
 > ```cpp
 > #include <algorithm>　　　	//STL 通用算法
 > #include <bitset>　　　　　	//STL 位集容器
