--- a/2.基础/初始化.md
+++ b/2.基础/初始化.md
@@ -1,3 +1,5 @@
+[TOC]
+---
 1. 创建对象（类的实例）：
 在栈上创建对象	实参位于对象名后面，例如Clock today(0,0,0)；
 在堆上创建对象	实参位于类名后面，例如Clock *ptoday=new Clock(0,0,0);使用结束后应该delete
