--- a/2.基础/类型转换.md
+++ b/2.基础/类型转换.md
@@ -1,3 +1,7 @@
+[TOC]
+---
+## 隐式转换
+
 ## 强制类型转换
 ==强制类型转换干扰了正常的类型检查，尽量避免使用==
 
@@ -16,3 +20,4 @@ double d = static_cast<double>(num);
 | `dynamic_cast`     | 用于将基类的指针或引用安全地转换成派生类指针或引用。如果转型失败，当转型对象是指针的时候会返回一个null指针: `dynamic_cast<typename*> (p)` |
 | `const_cast`       | 只能改变对象的底层const，可以改变表达式的常量属性                                                                                         |
 | `reinterpret_cast` | 不相关类型的转换, 例如从`int`到`int*`                                                                                                
+
