--- a/2.基础/输入输出.md
+++ b/2.基础/输入输出.md
@@ -1,3 +1,5 @@
+[TOC]
+---
 ## 输入输出相关常用:	
 > 1. `endl`等价于`'\n'<<flush`，会刷新缓冲区，造成效率低下。推荐用`'\n'`代替`endl`；
 > 2. 可以使用`tie()`函数解除`cin`与`cout`的绑定，加快输入输出效率：
