--- a/3.类与对象/1.类与对象.md
+++ b/3.类与对象/1.类与对象.md
@@ -1,3 +1,4 @@
+[TOC]
 # 类的概念
 
 > 1. `class`是用户自定义类型，可以定义;
@@ -29,7 +30,7 @@ private: // 私有成员
 > 2. `struct`是成员和继承关系默认是`public`属性的,`class`默认为`private`；
 > 3. C语言中`struct`只能包含成员变量，不可包含成员函数，C++都可包含；
 > 4. `class`可以使用模板，`struct`不能使用。
-> - 更多关于`struct`, `enum`, `union`可见[数据类型](..\类型与初始化\数据类型.md)
+> - 更多关于`struct`, `enum`, `union`可见[数据类型](..\2.基础\数据类型.md)
 
 ---
 # 对象的概念
