--- a/2.基础/初始化.md
+++ b/2.基础/初始化.md
@@ -1,5 +1,27 @@
 [TOC]
 ---
+### 类型别名
+C方法`typedef`	
+```cpp
+typedef int n; //n是int的同义词
+typedef n a, *p; //a是int的同义词，p是int*的同义词
+```
+新标准别名声明`using`
+```cpp
+using n = int; //n是int的同义词
+```
+类型别名前不能加修饰符：
+```cpp
+unsigned n i;  // 错误 
+```
+b. `{}`列表初始化
+可以避免发生窄化转换
+int i = 3.14;  // 会发生窄化转换，丢失信息，丢失0.14
+int i = {3.14};  // 会报错
+`auto`类型说明
+
+b. auto与{}列表: 如果不希望得到initializer_list<T>类型，应该选择=而非{}
+auto x{1};  // 推断为int列表
 1. 创建对象（类的实例）：
 在栈上创建对象	实参位于对象名后面，例如Clock today(0,0,0)；
 在堆上创建对象	实参位于类名后面，例如Clock *ptoday=new Clock(0,0,0);使用结束后应该delete
