--- a/3.类与对象/2.构造函数与析构函数.md
+++ b/3.类与对象/2.构造函数与析构函数.md
@@ -68,7 +68,27 @@ Clock::Clock(int hour,int minute,int second):m_hour(hour),m_minute(minute),m_sec
 Clock::Clock():m_hour(0),m_minute(0),m_second(0){};//不使用委托构造函数
 Clock::Clock():Clock(0,0,0){};//使用委托构造函数
 ```
+### 7. 派生类的构造函数：
+类的构造函数不能被继承，可以用using语句继承基类构造函数（只能初始化继承的成员）即使继承了也不能成为派生类的构造函数（最好不用）
+`using People::People;
+解决方法是在派生类的构造函数中调用基类的构造函数。
 
+`派生类名::派生类名(基类所需的形参，本类成员所需的形参): 基类名(参数表), 本类成员初始化列表`
+
+```cpp
+People(std::string name,int age);//基类构造函数声明
+Student(std::string name,int age,float score);//派生类构造函数声明
+Student::Student(std::string name,int age,float score):
+People(name, age), score_(score){
+    ... //单继承派生类构造函数的初始化列表
+```    
+#### 派生类构造函数的执行顺序：
+1. 调用基类构造函数：顺序按照继承时声明的顺序
+2. 初始化列表成员进行初始化，按照在类中定义的顺序，对象成员初始化自动调用所. 的构造函数
+3. 执行派生类的构造函数体
+派生类构造函数中只能调用直接基类的构造函数，不能调用间接基类的
+#### 基类构造函数的调用规则：
+定义派生类构造函数时应指明基类构造函数，否则就调用基类的默认构造函数。如果基类没有默认构造函数（定义了其他构造函数，编译器不生成隐含的默认构造函数），编译失败
 
 ## 析构函数
 **析构函数作用**：用于销毁对象释放内存。
@@ -77,10 +97,13 @@ Clock::Clock():Clock(0,0,0){};//使用委托构造函数
 > 3. 当类中不存在指针、动态分配内存时，可以不指定析构函数；否则必须指定用来释放掉指针所指向内存，避免内存泄漏
 
 ```cpp
-~Clock();//析构函数声明
-    Clock::Clock(){
+Clock::~Clock(){
     delete[] m_arr; //释放申请的数组的内存
 } //析构函数定义
 ```
+### 派生类的析构函数：
+类的析构函数也不能被继承，与构造函数不同的是，在子类的析构函数中不用显式地调用父类的析构函数。子类的析构函数另外声明定义（若需要）
 
 ## 限定符
+
+
