--- a/2.基础/说明符与限定符.md
+++ b/2.基础/说明符与限定符.md
@@ -1,6 +1,8 @@
 ## 说明符
-### alignas说明符 (C++11)
-### decltype说明符(C++11)
+---
+### 存储类说明符
+### `alignas`说明符 (C++11)
+### `decltype`说明符(C++11)
 **`decltype`**：检查 *实体* 的声明类型，或 *表达式* 的类型和值类别(包括顶层const和引用)
 ```cpp
 decltype(f()) sum = x;//sum的类型是f的返回类型
@@ -31,7 +33,7 @@ auto item1 = var1, item2 = var2;//若var1和var2类型不一样将会报错
 ## 限定符
 ### cv-限定符
 
-## `constexpr`
+### `constexpr`
 > 1. 将变量声明为constexpr类型，可以让编译器验证变量值是否为常量表达式（编译过程就能得到结果的表达式），必须用常量表达式初始化。
 > 2. 普通函数不能作为constexpr变量的初始值，但是可以通过定义constexpr函数（足够简单）来初始化constexpr变量
 > 3. constexpr int *p = nullptr; // p是常量指针（顶层const,和const定义的不同）
@@ -57,7 +59,6 @@ constexpr int Bad2(int a){
         return -a;
 }
 ```
-
 
 
 ### `[[noreturn]]`
