--- a/3.类与对象/3.拷贝与移动.md
+++ b/3.类与对象/3.拷贝与移动.md
@@ -1,25 +1,39 @@
 ## 拷贝
 > 
-### 浅拷贝：逐成员复制
-§ 默认的拷贝函数是逐成员复制，如果成员中有指针变量时会复制其指向的地址，造成浅拷贝，a对象还是可以访问到b对象的部分内存
-### 深拷贝：拷贝对象的完整状态
-§ 示例1：String对象的深拷贝构造函数
-        inline String::String(String& str){
-            m_data=new char[strlen(str.m_data) + 1];
-            strcpy(m_data,str.m_data);
+### 1. 浅拷贝
+**浅拷贝**：默认的拷贝函数是**逐成员复制**，如果成员中有指针变量时会复制其指向的地址，复制对象还是可以访问到被复制对象的部分内存
+### 2. 深拷贝
+**深拷贝**：拷贝对象的完整状态，会重新开辟一块内存地址存储指针指向地址的内容。
+#### 深拷贝构造函数
+```cpp
+// String对象的深拷贝构造函数
+inline String::String(String& str){
+    data_=new char[strlen(str.data_) + 1];
+    strcpy(data_, str.data_);
 }
-
-§ 示例2：拷贝赋值函数
-       inline String&String::operator=(const String&str){
-            if(this==&str){ //先判断是否是自我赋值
-                return *this;
-            }
-            delete[]this.m_data; //先delete已存在的字符串
-            this.m_data=new char[strlen(str.m_data) + 1]; //+1是末尾的'\0'
-            strcpy(this.m_data,str.m_data);
-            return *this;
+```
+#### 拷贝赋值函数
+存在深拷贝构造函数时，还必须定义**拷贝赋值函数**，即`operator=`
+> ==定义拷贝赋值函数的步骤：==
+> 1. 先判断是否自我赋值
+> 2. `delete`掉复制对象数据的内存
+> 3. `new`出一块与被复制对象数据相等的内存空间，并复制
+```cpp
+// String对象的拷贝赋值函数
+inline String&String::operator=(const String& str){
+    if(this == &str){ //先判断是否是自我赋值
+        return *this;
+    }
+    delete[] this.data_; //先delete已存在的字符串
+    this.data_ = new char[strlen(str.m_data) + 1]; //+1是末尾的'\0'
+    strcpy(this.data_, str.data_);
+    return *this;
 }
-
-
+```
+```cpp
+String s1("hello");
+String s2(s1); // 调用拷贝构造函数
+s2 = s1; // 调用拷贝赋值函数
+```
 ## 移动操作：
 代替深拷贝，最小化拷贝量而不会增加复杂性
