--- a/3.类与对象/4.继承与派生.md
+++ b/3.类与对象/4.继承与派生.md
@@ -52,10 +52,12 @@ b. 派生类的对象可以初始化基类的引用；
 c. 派生类的指针可以隐含转换为基类的指针
 
 
-## 虚继承：为了解决多继承时的命名冲突和冗余数据问题，C++ 提出了虚继承，使得在派生类中只保留一份间接基类的成员。虚派生只影响从指定了虚基类的派生类中进一步派生出来的类D，它不会影响派生类A、B。
+## 虚继承：
+**作用**：为了解决多继承时的命名冲突和冗余数据问题，C++ 提出了虚继承，使得在派生类中只保留一份间接基类的成员。虚派生只影响从指定了虚基类的派生类中进一步派生出来的类D，它不会影响派生类A、B。
 
 
-b. 虚继承的语法:在继承方式前加上virtual关键字
+语法:在继承方式前加上virtual关键字
+```cpp
 //虚基类A
 class A{
 public:
@@ -72,12 +74,16 @@ class C: virtual public A{
 class D: public B, public C{
     …
 };
+
+```
 c. 虚继承的变量覆盖
 类A和B中都没有定义变量x	x被解析成A的成员，无二义性
 类A或B中有一个定义了变量x	x被解析成A或B中的成员变量，A中的被覆盖
 类A和B中都定义了变量x	有二义性，必须用::说明x所属的类
 d. 虚继承时的构造函数
+```cpp
 D::D(int x1,int x2,int x3,int x4):A(x1),B(x2),C(x3),D_x(x4){}
+```
 最终派生类不仅需要调用B,C的构造函数，还需要调用间接基类A的构造函数（B,C的构造函数对A的初始化是无效的，只有D有效，普通继承不能调用间接基类）
 构造函数的调用顺序：先调用虚基类的构造函数，再按出现顺序调用其他构造函数
 e. 向上转型（upcasting）
