--- a/3.类与对象/5.虚函数(覆盖)与多态.md
+++ b/3.类与对象/5.虚函数(覆盖)与多态.md
@@ -2,8 +2,11 @@
 ## 虚函数 
 ---
 **虚函数**是可在派生类中覆盖其行为的成员函数。与非虚函数相反，即使没有关于该类实际类型的编译时信息，仍然保留被覆盖的行为。==虚函数的唯一用途就是构成运行时的多态。==
-`声明符 虚说明符序列(可选) 纯说明符(可选)`
-虚说明符序列，必须是 `override`、`final`、`final override` 或 `override final`之一
+重载和覆盖的区别
+> ```cpp
+> 声明符 虚说明符序列(可选) 纯说明符(可选)
+> ```
+> 虚说明符序列，必须是 `override`、`final`、`final override` 或 `override final`之一
 > 1. 非虚(non-`virtual`)函数：不希望派生类重定义(`override`)，普通成员函数
 > 2. 虚(`virtual`)函数：希望派生类重新定义，当前类有定义
 > 3. 纯虚(pure `virtual`)函数：派生类必须重新定义，而且没有默认定义
@@ -22,7 +25,7 @@ public:
 ```
 ### 纯虚函数
 
-
+1. 纯虚函数的声明:
 ```cpp
 virtual type FunName(para_list) = 0; //在结尾加上=0告诉编译器这是纯虚函数
 ```
@@ -73,10 +76,21 @@ Line *p = new Cube(5);//纯虚函数可以实现多态
     c. 存在基类的指针，通过该指针调用虚函数。
 虚函数实现：
 > 将虚函数名转换为虚函数表(vbtl)中的一个索引，每个虚函数都有自己的vbtl用来标识虚函数
-> 
 
-    
-    • 橙色线框中的内容仅限于虚拟继承的情形（若无虚拟继承，则无此内容）
-    • “offset to top”是指到对象起始地址的偏移值，只有多重继承的情形才有可能不为0，单继承或无继承的情形都为0。
-    • “RTTI information”是一个对象指针，它用于唯一地标识该类型。
+
+
+- 橙色线框中的内容仅限于虚拟继承的情形（若无虚拟继承，则无此内容）
+- “offset to top”是指到对象起始地址的偏移值，只有多重继承的情形才有可能不为0，单继承或无继承的情形都为0。
+- “RTTI information”是一个对象指针，它用于唯一地标识该类型。
 “virtual function pointers”也就是我们之前理解的虚函数表，其中存放着虚函数指针列表
+
+## 虚函数表与虚指针
+**虚函数实现**：将虚函数名转换为虚函数表(vbtl)中的一个索引，每个虚函数都有自己的vbtl用来标识虚函数
+![20190903104536.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104536.png)
+
+
+![20190903104551.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104551.png)
+- 橙色线框中的内容仅限于虚拟继承的情形（若无虚拟继承，则无此内容）
+- “offset to top”是指到对象起始地址的偏移值，只有多重继承的情形才有可能不为0，单继承或无继承的情形都为0。
+- “RTTI information”是一个对象指针，它用于唯一地标识该类型。
+“virtual function pointers”也就是我们之前理解的虚函数表，其中存放着虚函数指针列表。
