--- a/3.类与对象/1.类与对象.md
+++ b/3.类与对象/1.类与对象.md
@@ -1,11 +1,11 @@
 [TOC]
-# 类的概念
+## 类的概念
 ---
 
 > 1. `class`是用户自定义类型，可以定义;
 > 2. 一个类是包含其成员的命名空间;
 > 3. 
-> 3. 可以为类定义运算符，如+, !和[]
+> 3. 可以为类定义运算符，如`+`, `!`和`[]`
 > 4. `public`成员提供类的接口，`private`成员提供实现细节
 > 5. 类是一个模板，编译后不占用内存空间，所以定义类时不能对类进行初始化，只能创建对象的时候初始化;
 > 6. `class`如果不指明成员属性，默认为`private`
@@ -23,18 +23,20 @@ private: // 私有成员
 ```
 > ==和`struct`, `enum`一样，`';'`也是类定义的一部分, 表示类定义结束==
 
+ 
 
-1. 
-
-## `class`, `union`, `struct`和`enum`的关系
+### `class`, `union`, `struct`和`enum`的关系
 > 1. `struct`是一种特殊的类, `union`和`enum`则是一种特殊的`struct`；
 > 2. `struct`是成员和继承关系默认是`public`属性的,`class`默认为`private`；
 > 3. C语言中`struct`只能包含成员变量，不可包含成员函数，C++都可包含；
 > 4. `class`可以使用模板，`struct`不能使用。
 > - 更多关于`struct`, `enum`, `union`可见[数据类型](..\2.基础\数据类型.md)
+### 成员函数
+参数列表中使用const可以适用于const对象
 
+### 成员变量
 ---
-# 对象的概念
+## 对象的概念
 ---
 
 类与对象的关系
