--- a/3.类与对象/2.成员类型关键词.md
+++ b/3.类与对象/2.成员类型关键词.md
@@ -85,9 +85,9 @@ public:
 
 操作 | 说明
 :------- | :-------
-**声明和定义** | 类中声明需要static，类外定义不能加static，但必须要有数据类型
-**this指针** | 静态成员函数通过类调用，不属于对象，编译器不会为其增加形参**this指针**
-**访问** | 不可使用this指针，可以通过对象调用，也可以在没有实例化对象时直接调用
+**声明和定义** | 类中声明需要`static`，类外定义不能加`static`，但必须要有数据类型
+**this指针** | 静态成员函数通过类调用，不属于对象，编译器不会为其增加形参`this`**指针**
+**访问** | 不可使用`this`指针，可以通过对象调用，也可以在没有实例化对象时直接调用
 
 ### `friend`友元函数
 **友元函数作用**：可以使其他类中的成员函数或全局函数访问当前类的private成员。
@@ -95,8 +95,8 @@ public:
 2. `friend`函数没有`this`指针，不能直接访问类的成员，必须借助类的对象访问；
 3. 同一个`class`的对象互为`friend`；
 4. 一个函数可以被多个类声明为友元函数，这样可以访问多个类中的`private`成员；
-5. 访问说明符(`public`，`protect`，``)对于友元声明的含义没有影响
-#### `friend`函数
+5. 访问说明符(`public`，`protect`，`private`)对于友元声明的含义没有影响
+#### 1. `friend`函数
 1. 将非成员函数声明为`friend`函数：
     ```cpp
     class Clock{
@@ -121,7 +121,7 @@ public:
         void show(Clock *ptime);
     };
     ```
-#### `friend`类
+#### 2. `friend`类
 **友元类**：可以将整个类声明为另一个类的友元（==不建议，只将成员函数声明为友元函数更安全==）
 > 1. 友元关系是单向的（你是我的朋友，我不一定是你的）
 > 2. 友元类只能声明，不能定义新的类（`friend class X {};` 是错的）
@@ -136,7 +136,7 @@ class Clock{
 
 ### `explicit`关键词
 
-> - explicit指明构造函数不能作隐式类型转换，只能用于初始化和显式类型转换
+> - `explicit`指明构造函数不能作隐式类型转换，只能用于初始化和显式类型转换
 > - 用 = 进行初始化可看作拷贝初始化，初始化器是右值时可能会采取移动操作。省略= 会将初始化变为显式初始化
 > - ==单参数的构造函数应声明为explicit==，避免发生不必要的类型转换
 ```cpp
