--- a/4.函数/3.函数重载.md
+++ b/4.函数/3.函数重载.md
@@ -21,7 +21,7 @@ type operator 运算符名称(parm){
 ```
 
 #### 运算符重载的规则
-> 1. 箭头运算符`->`、下标运算符`[]`、函数调用运算符`()`、赋值运算符=只能以成员函数的形式重载
+> 1. 箭头运算符`->`、下标运算符`[]`、函数调用运算符`()`、赋值运算符`=`只能以成员函数的形式重载
 > 2. 一般将单目运算符以及`+=`、`-=`、`*=`、`/=`（复合赋值运算符）重载成成员函数，将双目运算符重载为友元函数（非成员函数）
 > 3. 双目运算符形参在参数表中的顺序任意，但在使用时左侧操作数需要与第一个参数对应，右侧操作数与第二个参数对应。数学上的交换律在此不适用，如果希望适用，应在此重载操作符并调整参数表顺序。
 
@@ -46,7 +46,7 @@ type operator 运算符名称(parm){
 //以全局函数的形式重载`+`
 class Complex{
 public:
-friend Complex operator+(const Complex &c1, const Complex &c2);
+	friend Complex operator+(const Complex &c1, const Complex &c2);
 //重载+运算符
 }
 Complex operator+(const Complex &c1, const Complex &c2){
@@ -85,7 +85,7 @@ return os;
 }
 ```	
 ##### 示例5：重载下标运算符`[]`
-单目运算符必须以成员函数形式进行重载，`[]`运算符在
+单目运算符必须以成员函数形式进行重载，`[]`是后置运算符
 ```cpp
 //不仅可以访问元素，还可以修改
 int &operator[](int i){
@@ -96,38 +96,36 @@ const int &Array::operator[](int i) const{
 return data_[i];
 }
 ```
-	1. 重载自增++和自减--运算符：
-	对++运算符以成员函数形式进行重载
-		1. A &operator++(); //++i，前置形式。为了与内置保持一致应返回对象的引用
-		2. A operator++(int); //i++，后置形式，参数int没有意义，只是为了区分前置和后置
-		3. A::A &operator++(){
-		4. return run();//run返回增加后的值
-		5. }
-		6. A::A operator++(int n){
-		7. A temp = *this;
-		8. run();
-		9. return temp;//temp保存原来的值
-		10. }
-	4. 重载new和delete运算符：
-		a. 重载new运算符
-		void * className::operator new( size_t size ){//成员函数形式
-		    //TODO:
-		}
-		void * operator new( size_t size ){//全局函数形式
-		    //TODO:
-		}
-		在重载 new 或 new[] 时，无论是作为成员函数还是作为全局函数，它的第一个参数必须是 size_t 类型。size_t 表示的是要分配空间的大小，对于 new[] 的重载函数而言，size_t 则表示所需要分配的所有空间的总和。
-		b. 重载delete运算符
-		void className::operator delete( void *ptr){//成员函数形式
-		    //TODO:
-		}
-		void operator delete( void *ptr){//全局函数形式
-		    //TODO:
-		}
-		两种重载形式的返回值都是 void 类型，并且都必须有一个 void 类型的指针作为参数，该指针指向需要释放的内存空间。
-		
-
-
-
-		
-
+##### 示例6：重载自增`++`和自减`--`运算符：
+对++运算符以成员函数形式进行重载，有前置和后置两种形式
+```cpp
+A &operator++(); //++i，前置形式。为了与内置保持一致应返回对象的引用
+A operator++(int); //i++，后置形式，参数int没有意义，只是为了区分前置和后置
+A::A &operator++(){
+return run();//run返回增加后的值
+}
+A::A operator++(int n){
+A temp = *this;
+run();
+return temp;//temp保存原来的值
+ }
+```	
+##### 示例7：重载`new`和`delete`运算符：
+可以以成员函数形式或全局函数形式重载`new`运算符，在重载`new`或`new[]`时，无论是作为成员函数还是作为全局函数，它的第一个参数必须是`size_t`类型。`size_t`表示的是要分配空间的大小，对于`new[]`的重载函数而言，`size_t`则表示所需要分配的所有空间的总和。
+```cpp
+void * className::operator new(size_t size){//成员函数形式
+    ...
+}
+void * operator new(size_t size){//全局函数形式
+    ...
+}
+```		
+重载`delete`运算符，两种重载形式的返回值都是`void`类型，并且都必须有一个`void`类型的指针作为参数，该指针指向需要释放的内存空间。
+```cpp
+void className::operator delete( void *ptr){//成员函数形式
+    ...
+}
+void operator delete( void *ptr){//全局函数形式
+    ...
+}
+```		
