--- a/7.内存模型/智能指针与内存回收.md
+++ b/7.内存模型/智能指针与内存回收.md
@@ -1,7 +1,7 @@
 ## 智能指针
 智能指针表达所有权，位于<memory>中，智能指针自身被销毁时，会自动销毁指针指向的对象。
-### 1. `auto_ptr`(C++11弃用)
-
+### 1. `auto_ptr`
+自C++11开始已经弃用
 ### 2. `unique_ptr`
 `unique_ptr`互斥的所有权
 拥有一个对象，保存一个指针，并负责用释放器销毁对象(默认版本无释放器，直接调用`delete`)
