--- a/3.类与对象/2.成员类型关键词.md
+++ b/3.类与对象/2.成员类型关键词.md
@@ -13,8 +13,24 @@
 > 4. `this`是一个右值，不能取得`this`的地址(不能`&this`)
 
 ### `inline`关键词
-**内联函数作用**：内联inline希望编译器能够在编译时将函数在调用的地方展开，能加快运行效率。
-完全在`class`/`struct`/`union`的定义之内定义的函数，无论它是成员函数还是非成员`friend`函数，均为隐式的内联函数
+**作用**：`inline`希望编译器能够在编译时将函数在调用的地方展开，能加快运行效率。
+在`class`/`struct`/`union`的定义之内定义的函数，无论它是成员函数还是非成员`friend`函数，均为隐式的内联函数
+```cpp
+// 模板类类外内联函数的定义示例
+template<class T>
+class shared_ptr
+{
+public:
+    inline T& operator() const;
+private:
+    T* px;
+    long* pn;
+};
+template<class T>
+inline T* shared_ptr<T>::operator->() const{
+    return px;
+}
+```
 
 内联函数比较简单，当形式复杂时，编译器不会将其编译为内联函数
 
@@ -22,8 +38,8 @@
 ### `const`与`mutable`关键词
 `const`可以用来修饰**成员变量**、**成员函数**、**对象**
 - `const`**成员变量**：和普通变量用法相似，只能通过参数初始化列表初始化
-- `const`**对象**：将对象定义为常对象后，就只能访问被const修饰的成员（非const成员可能会修改对象数据，编译器是禁止的，因此不改变数据的成员函数必须加const）
-- `const`**成员函数**（常成员函数）：可以使用类中所有成员变量，但是不能修改它们的值，在定义和声明的时候都要在结尾加上const关键词
+- `const`**对象**：将对象定义为常对象后，就只能访问被`const`修饰的成员（非`const`成员可能会修改对象数据，编译器是禁止的，因此不改变数据的成员函数必须加`const`）
+- `const`**成员函数**（常成员函数）：可以使用类中所有成员变量，但是不能修改它们的值，在定义和声明的时候都要在结尾加上`const`关键词
 > 实际上`const`修饰的是隐式的`this`指针
 
 ```cpp
@@ -62,7 +78,7 @@ public:
 }；
 ```
 **注意事项**：
-> - static静态成员变量必须在类声明的外部初始化(C++17之前)；
+> - `static`静态成员变量必须在类声明的外部初始化(C++17之前)；
 >   ```cpp
 >   type class::name = value; //静态成员变量在初始化时不能再加static，但必须要有数据类型
 >   ```
@@ -90,7 +106,7 @@ public:
 **访问** | 不可使用`this`指针，可以通过对象调用，也可以在没有实例化对象时直接调用
 
 ### `friend`友元函数
-**友元函数作用**：可以使其他类中的成员函数或全局函数访问当前类的private成员。
+**作用**：可以使其他类中的成员函数或全局函数访问当前类的`private`成员。
 1. `friend`的关系不能传递（你朋友的朋友不是你的朋友），也不能被继承（你朋友的孩子不是你的朋友）；
 2. `friend`函数没有`this`指针，不能直接访问类的成员，必须借助类的对象访问；
 3. 同一个`class`的对象互为`friend`；
@@ -135,10 +151,13 @@ class Clock{
 ```
 
 ### `explicit`关键词
-
-> - `explicit`指明构造函数不能作隐式类型转换，只能用于初始化和显式类型转换
-> - 用 = 进行初始化可看作拷贝初始化，初始化器是右值时可能会采取移动操作。省略= 会将初始化变为显式初始化
-> - ==单参数的构造函数应声明为explicit==，避免发生不必要的类型转换
+**作用**：禁止隐式调用单参数的构造函数，包括：
+1. 禁止隐式调用拷贝构造函数
+2. 禁止类对象之间的隐式转换(见转换函数)
+> - 一般而言，只有单参数的构造函数会用到`explicit`关键字
+> - `explicit`指明构造函数不能作隐式类型转换，只能进行初始化和显式类型转换
+> - 用`=`进行初始化可看作拷贝初始化，初始化器是右值时可能会采取移动操作。省略`=`会将初始化变为显式初始化
+> - ==单参数的构造函数应声明为`explicit`==，避免发生不必要的类型转换，更多可见转换函数
 ```cpp
 class Clock{
 public:
@@ -146,13 +165,13 @@ public:
 };
 ```
 ### `virtual`, `override`与`final`关键词
-**`virtual`函数**(Virtual Function)见[虚函数与多态](5.虚函数与多态.md)。
-
-`override`说明该虚函数必须被覆盖
-是在**成员函数声明符**之后使用时拥有特殊含义的标识符：其他情况下它不是保留的关键词，如果不能覆盖（不是虚函数、形参不对）会出错
-如果没有用`overide`关键字，当虚函数返回类型或参数不一样时将会造成函数的隐藏而不是覆盖
-覆盖的方法不能为`private`
-`final`用来防止成员函数被覆盖:
-```cpp
-void setname() final;
-```
+**作用**：
+1. **`virtual`函数**(Virtual Function)见[虚函数与多态](5.虚函数与多态.md)。
+2. `override`说明该虚函数必须被覆盖
+    > 1. 是在**成员函数声明符**之后使用时拥有特殊含义的标识符：其他情况下它不是保留的关键词，如果不能覆盖（不是虚函数、形参不对）会出错
+    > 2. 如果没有用`overide`关键字，当虚函数返回类型或参数不一样时将会造成函数的隐藏而不是覆盖
+    > 3. 覆盖的方法不能为`private`
+3. `final`用来防止成员函数被覆盖:
+    ```cpp
+    void setname() final;
+    ```
