--- a/4.函数/3.函数重载.md
+++ b/4.函数/3.函数重载.md
@@ -22,7 +22,7 @@ type operator 运算符名称(parm){
 
 #### 运算符重载的规则
 > 1. 箭头运算符`->`、下标运算符`[]`、函数调用运算符`()`、赋值运算符`=`只能以成员函数的形式重载
-> 2. 一般将单目运算符以及`+=`、`-=`、`*=`、`/=`（复合赋值运算符）重载成成员函数，将双目运算符重载为友元函数（非成员函数）
+> 2. 一般将单目运算符以及`+=`、`-=`、`*=`、`/=`（复合赋值运算符）重载为成员函数，将双目运算符重载为友元函数（非成员函数）
 > 3. 双目运算符形参在参数表中的顺序任意，但在使用时左侧操作数需要与第一个参数对应，右侧操作数与第二个参数对应。数学上的交换律在此不适用，如果希望适用，应在此重载操作符并调整参数表顺序。
 
 #### 不能被重载的运算符
@@ -128,4 +128,4 @@ void className::operator delete( void *ptr){//成员函数形式
 void operator delete( void *ptr){//全局函数形式
     ...
 }
-```		
+```
