--- a/7.内存模型/3.new和delete.md
+++ b/7.内存模型/3.new和delete.md
@@ -8,7 +8,9 @@ void *operator delete(void *p);
 void *operator delete[](void *p);
 ```
 ### 1. `new`操作符
-先分配内存，再调用`ctor`(构造函数)，内部调用`malloc`
+先分配内存，再调用`ctor`(构造函数)，内部调用`malloc()`
+
+
 ```cpp
 // 
 Complex* pc = new Complex(1, 2);
@@ -18,7 +20,7 @@ void* mem = operator new(sizeof(Complex));//内部调用malloc
 pc = static_cast<Complex*>(mem);
 pc->Complex::Complex(1, 2);
 ```
-没有多余内存时会抛出bad_alloc异常，有的程序不允许异常，可以使用`noexcept`版本：
+没有多余内存时会抛出`bad_alloc`异常，有的程序不允许异常，可以使用`noexcept`版本：
 ```cpp
 void *oparator new(size_t, const nothrow_t&) noexcept;
 void *oparator delete(void *pt, const nothrow_t&) noexcept;
@@ -32,9 +34,9 @@ X *p = new{buf} X;  // 在buf处构建X
 ```
 
 ### 2. `delete`操作符
-先调用`dtor`析构函数，再释放内存，内部调用`free`
+先调用`dtor`析构函数，再释放内存，内部调用`free()`
 
-### 3. `new`和`delete`区别与联系
+### 3. `delete`和`delete[]`区别与联系
 `new[]`一定要搭配`delete[]`，否则会造成少调用析构函数
 ```cpp
 string *p = new string[3];
@@ -46,5 +48,11 @@ string *p = new string[3];
 delete p; //调用1次dtor
 ```	
 
-### 4. `new/delete`和`malloc/free`
+### 4. `new/delete`和`malloc/free`的区别
+> `new/delete`和`malloc/free`成对使用，不要混合使用：
+> - 当使用`free()`释放`new`申请的内存时，可能会导致没有调用对象的析构函数
+> - C++没有规定`new`实现的标准，有的编译器可能不是使用`malloc()`实现；
+> - `operator new`可以被重载，可能会引发其他的错误
+
 ![20190911151533.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190911151533.png)
+> 堆是操作系统维护的一块内存，而自由存储是C++中通过`new`/`delete`动态分配和释放对象的抽象概念(类似于顺序表与线性表的关系)。堆与自由存储区并不等价。自由存储区可以由堆实现，也可以用其他内存
