--- a/2.基础/初始化.md
+++ b/2.基础/初始化.md
@@ -1,35 +1,43 @@
 [TOC]
 ---
+栈上初始化
+在栈上创建对象	实参位于对象名后面，例如Clock today(0,0,0)；
+在堆上创建对象	实参位于类名后面，例如Clock *ptoday=new Clock(0,0,0);使用结束后应该delete
+    `auto`* p=new Clock(0,0,0);和`auto` p=new Clock(0,0,0);是一样的
+
 ### 类型别名
-C方法`typedef`	
+#### 1. C语言方法`typedef`	
 ```cpp
 typedef int n; //n是int的同义词
 typedef n a, *p; //a是int的同义词，p是int*的同义词
 ```
-新标准别名声明`using`
+#### 2. 新标准别名声明`using`
 ```cpp
-using n = int; //n是int的同义词
+using zs = int; //n是int的同义词
 ```
-类型别名前不能加修饰符：
+注意类型别名前不能加修饰符：
 ```cpp
-unsigned n i;  // 错误 
+unsigned zs i;  // 错误 
 ```
 b. `{}`列表初始化
 可以避免发生窄化转换
+```cpp
 int i = 3.14;  // 会发生窄化转换，丢失信息，丢失0.14
-int i = {3.14};  // 会报错
-`auto`类型说明
+int i = {3.14};  // error
+```
+### `auto`占位符
 
-b. auto与{}列表: 如果不希望得到initializer_list<T>类型，应该选择=而非{}
+#### `auto`规则
+1. `auto`变量必须在定义时初始化
+2. `auto`只能使用在局部变量。别用在文件作用域变量，命名空间作用域变量和类数据成员里。永远别使用列表初始化`auto`变量
+3. 定义在一个`auto`序列的变量必须始终推导成同一类型
+    ```cpp
+    auto a4 = 10, a5 = 20, a6 = 30;//正确
+    auto b4 = 10, b5 = 20.0, b6 = 'a';//错误,没有推导为同一类型
+    ```
+4. 如果初始化表达式是引用，则去除引用语义
+5. 如果初始化表达式为`const`或`volatile`，则除去`const`/`volatile`语义(`auto`不能自动推导成cv限定符)
+6. `auto`仅仅是一个占位符，不能使用`sizeof`或`typeid`
+7. `auto`与`auto*`
+8. `auto`与{}列表: 如果不希望得到`initializer_list<T>`类型，应该选择`=`而非`{}`
 auto x{1};  // 推断为int列表
-1. 创建对象（类的实例）：
-在栈上创建对象	实参位于对象名后面，例如Clock today(0,0,0)；
-在堆上创建对象	实参位于类名后面，例如Clock *ptoday=new Clock(0,0,0);使用结束后应该delete
-    auto* p=new Clock(0,0,0);和auto p=new Clock(0,0,0);是一样的
-3. 访问成员（创建对象后）
-对象使用.	today.display();
-指向对象的指针使用->	ptoday->display();
-
-auto 只能用在局部变量里用。别用在文件作用域变量，命名空间作用域变量和类数据成员里。永远别列表初始化 auto 变量。
-
-auto 还可以和 C++11 特性「尾置返回类型（trailing return type）」一起用，不过后者只能用在 lambda 表达式里。
