--- a/3.类与对象/2.构造函数与析构函数.md
+++ b/3.类与对象/2.构造函数与析构函数.md
@@ -69,12 +69,9 @@ Clock::Clock():m_hour(0),m_minute(0),m_second(0){};//不使用委托构造函数
 Clock::Clock():Clock(0,0,0){};//使用委托构造函数
 ```
 ### 7. 派生类的构造函数：
-类的构造函数不能被继承，可以用using语句继承基类构造函数（只能初始化继承的成员）即使继承了也不能成为派生类的构造函数（最好不用）
-`using People::People;
-解决方法是在派生类的构造函数中调用基类的构造函数。
-
-`派生类名::派生类名(基类所需的形参，本类成员所需的形参): 基类名(参数表), 本类成员初始化列表`
-
+类的构造函数不能被继承（可以用`using`语句继承基类构造函数（只能初始化继承的成员）即使继承了也不能成为派生类的构造函数，==最好不用==）
+`using People::People;`
+> 在子类的构造函数中调用基类的构造函数。
 ```cpp
 People(std::string name,int age);//基类构造函数声明
 Student(std::string name,int age,float score);//派生类构造函数声明
@@ -82,12 +79,12 @@ Student::Student(std::string name,int age,float score):
 People(name, age), score_(score){
     ... //单继承派生类构造函数的初始化列表
 ```    
-#### 派生类构造函数的执行顺序：
+#### 7.1. 派生类构造函数的执行顺序：
 1. 调用基类构造函数：顺序按照继承时声明的顺序
 2. 初始化列表成员进行初始化，按照在类中定义的顺序，对象成员初始化自动调用所. 的构造函数
 3. 执行派生类的构造函数体
 派生类构造函数中只能调用直接基类的构造函数，不能调用间接基类的
-#### 基类构造函数的调用规则：
+#### 7.2. 基类构造函数的调用规则：
 定义派生类构造函数时应指明基类构造函数，否则就调用基类的默认构造函数。如果基类没有默认构造函数（定义了其他构造函数，编译器不生成隐含的默认构造函数），编译失败
 
 ## 析构函数
